<resources>
    <string name="app_name">Каса</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="display">Відображати</string>
    <string name="not_display">Не відображати</string>
    <string name="use">Використовувати</string>
    <string name="not_use">Не використовувати</string>
    <string name="permit">Дозволено</string>
    <string name="not_permit">Не дозволено</string>
    <string name="touch_screen">Торкніться екрана</string>
    <string name="print">Друк</string>
    <string name="next">Далі</string>
    <string name="attention">Увага!</string>
    <string name="cancel">Відміна</string>
    <string name="need_print_reports">Потрібно роздрукувати звіти:</string>
    <string name="enter_number">введіть номер</string>
    <string name="enter_text">введіть текст</string>
    <string name="list">Список</string>
    <string name="enter_date_of_sale">Введіть дату продажу</string>
    <string name="goods">Товар/Послуга</string>
    <string name="blank">Бланк</string>
    <string name="ticket">Квиток</string>
    <string name="products_and_services">Товари/Послуги</string>
    <string name="not_selected">не вибрано</string>
    <string name="did_not_enter_number_document">Номер документа не введено</string>
    <string name="certificate">Посвідчення</string>
    <string name="enter_quantity_of_month_or_trip">Введіть кількість місяців/поїздок</string>
    <string name="not_nominal">Не іменний</string>
    <string name="enter_number_of_paper_blank">Введіть номер паперового бланку</string>
    <string name="zero_fiscal_receipt_sales">Нульвий фіскальний чек продажу</string>
    <string name="menuCashRegister">Каса</string>
    <string name="cashier">Касир</string>
    <string name="posadchyk">Посадчик</string>
    <string name="auditor">Ревізор</string>
    <string name="official_introduction">Cлужбове внесення</string>
    <string name="official_withdrawal">Cлужбове вилучення</string>
    <string name="fiscal_shift_close">Фіскальна зміна закрита!</string>
    <string name="casier_shift_close">Зміна касира закрита!</string>
    <string name="go_to_the_menu_reporting">Перейти в меню звітування?</string>
    <string name="menuOfficialIntroduction">Оберіть вид внесення</string>
    <string name="introduction_surplus">Внесення надлишків</string>
    <string name="introduction_from_another_cashier">Внесення від іншого касира</string>
    <string name="menuOfficialWithdrawal">Оберіть вид вилучення</string>
    <string name="withdrawal_to_another_cashier">Вилучення іншому касиру</string>
    <string name="introduction_amount">Сума внесення</string>
    <string name="enter_cost_of_products_and_services">Введіть вартість товарів/послуг</string>
    <string name="amount">Сума</string>
    <string name="number_cashier">Табельний номер касира</string>
    <string name="enter_number_of_cashier">Введіть табельний номер касира</string>
    <string name="enter_data_of_counterparty">Введіть дані контрагента</string>
    <string name="number_counterparty">Код контрагента</string>
    <string name="extract_not_available">Вилучення неможливе. Мало коштів.</string>
    <string name="date_of_departure">Дата відправлення</string>
    <string name="list_of_routes">Список маршрутів</string>
    <string name="number_train">Номер рейсу</string>
    <string name="enter_number_train">Введіть номер рейсу</string>
    <string name="choice_route">Виберіть маршрут</string>
    <string name="route">Маршрут</string>
    <string name="select_from_list_of_route">Виберіть маршрут</string>
    <string name="route_not_selected">Маршрут не вибрано</string>
    <string name="list_of_train">Список рейсів</string>
    <string name="select_from_list_of_train">Виберіть рейс</string>
    <string name="number_wagon">Номер вагону</string>
    <string name="list_of_wagon">Список вагонів</string>
    <string name="select_from_list_of_wagon">Виберіть вагон</string>
    <string name="list_of_types_class">Список класів місць</string>
    <string name="select_from_list_of_types_class">Виберіть клас місця</string>
    <string name="list_of_carriers">Список перевізників</string>
    <string name="select_from_list_of_carriers">Виберіть перевізника</string>
    <string name="wagon_not_selected">Вагон не вибрано</string>
    <string name="types_class_not_selected">Клас місця не вибрано</string>
    <string name="carriers_not_selected">Перевізника не вибрано</string>
    <string name="_new">Новий</string>
    <string name="retry">Повтор</string>
    <string name="name_counterparty">Назва контрагента</string>
    <string name="enter_number_wagon">Введіть номер вагону</string>
    <string name="train_not_selected">Рейс не вибрано</string>
    <string name="enter_date_of_departure">Ведіть дату відправлення</string>
    <string name="train">Рейс</string>
    <string name="withdrawal_to_counterparty">Вилучення контрагенту</string>
    <string name="redemption">Гашення</string>
    <string name="repay">Повернення</string>
    <string name="test_ticket">Пробний квиток</string>
    <string name="posadchyk_statement">Відомість посадчика</string>
    <string name="print_posadchyk_statement">Друкувати відомість посадчика?</string>
    <string name="redemption_receipt">Квитанція гашення</string>
    <string name="number_rro">Номер РРО</string>
    <string name="enter_number_rro">Введіть номер РРО</string>
    <string name="number_check">Номер чека</string>
    <string name="enter_number_check">Введіть номер чека</string>
    <string name="date_of_sale">Дата продажу</string>
    <string name="select_name_goods">Виберіть назву товару/послуги</string>
    <string name="quantity_of_goods">Кількість товарів/послуг</string>
    <string name="enter_quantity_of_goods">Введіть кількість товарів/послуг</string>
    <string name="unit_of_measurement">Одиниця виміру</string>
    <string name="select_unit_of_measurement">Виберіть одиницю виміру</string>
    <string name="add_position">Додати позицію</string>
    <string name="total_amount_repay">Загальна сума повернення</string>
    <string name="date_check_not_correct">Дата чека не вірна</string>
    <string name="goods_not_selected">Товар(послугу) не вибрано</string>
    <string name="unit_of_measurement_not_selected">Одиницю виміру не вибрано</string>
    <string name="enter_number_goods">Введіть код товару/послуги</string>
    <string name="number_goods">Код товару/послуги</string>
    <string name="name_goods">Назва товару/послуги</string>
    <string name="enter_name_goods">Введіть назву товару/послуги</string>
    <string name="goods_select_from_list">Товар/Послуга вибір зі списку</string>
    <string name="type_of_payment">Вид розрахунку</string>
    <string name="authorization_code">Код авторизації</string>
    <string name="enter_authorization_code">Введіть код авторизації</string>
    <string name="change">Здача</string>
    <string name="total">Всього</string>
    <string name="payment">Розрахунок</string>
    <string name="passenger">Пасажир</string>
    <string name="enter_passenger">Введіть дані пасажира</string>
    <string name="payment_document">Платіжний документ</string>
    <string name="enter_number_card">Введіть номер картки</string>
    <string name="e_ticket">Електронний квиток</string>
    <string name="enter_number_e_ticket">Введіть номер електронного квитка</string>
    <string name="enter_number_document">Введіть номер документа</string>
    <string name="card">Картка</string>
    <string name="cashless">Безготівковий платіж</string>
    <string name="cash">Готівка</string>
    <string name="fiscal_check_return">Фіскальний чек повернення</string>
    <string name="fiscal_check_sale">Фіскальний чек продажу</string>
    <string name="did_not_enter_passenger_data">Дані пасажира не введено</string>
    <string name="did_not_enter_authorization_code">Код авторизації не введено</string>
    <string name="did_not_enter_number_e_ticket">Номер електронного квитка не введено</string>
    <string name="select_from_list_of_goods">Виберіть Товар/Послугу</string>
    <string name="baggage_check">Багажна квитанція</string>
    <string name="subscription">Абонемент</string>
    <string name="tariff_fine">Тарифний штраф</string>
    <string name="administrative_fine">Адміністративний штраф</string>
    <string name="reducing_travel_card">Зменшення поїздок на картці</string>
    <string name="accounting_for_missing_passengers">Облік відсутніх пасажирів</string>
    <string name="barcode_not_read_off">Штрих-код не зчитується</string>
    <string name="read_barcode_again">Зчитати штрих-код ще раз</string>
    <string name="from_station">Від станції</string>
    <string name="to_station">До станції</string>
    <string name="transfer">Пересадка</string>
    <string name="non_stop">Без пересадки</string>
    <string name="with_transfer">З пересадкою</string>
    <string name="benefit">Пільга</string>
    <string name="enter_number_certificate">Введіть номер посвідчення</string>
    <string name="surname_of_passenger">Прізвище пасажира</string>
    <string name="enter_surname_of_passenger">Введіть прізвище пасажира</string>
    <string name="quantity_baggage">Кількість багажу</string>
    <string name="enter_quantity_baggage">Введіть кількість багажу</string>
    <string name="train_or_route">Рейс/Маршрут</string>
    <string name="list_of_station">Список станцій</string>
    <string name="select_from_list_of_station">Виберіть станцію</string>
    <string name="station_not_selected">Станцію не вибрано</string>
    <string name="exceeding_maximum_permissible_length_of_route">Перевищення максимальної допустимої довжини маршруту</string>
    <string name="km">км.</string>
    <string name="one_way">Туди</string>
    <string name="and_return">Туди і Назад</string>
    <string name="way">Напрямок</string>
    <string name="select_station">Виберіть станцію</string>
    <string name="from_station_not_selected">Станція відправлення не вибрана</string>
    <string name="to_station_not_selected">Станція прибуття не вибрана</string>
    <string name="did_not_enter_quantity_baggage">Не введено кількість багажу</string>
    <string name="quantity_seat">Кількість місць</string>
    <string name="list_of_seat">Список місць</string>
    <string name="select_from_list_of_seats">Виберіть місце</string>
    <string name="number_seat">Номер місця</string>
    <string name="enter_number_seat">Введіть номер місця</string>
    <string name="additional_charge">Додатковий збір</string>
    <string name="select_article_of_tariff_fine">Виберіть статтю тарифного штрафу</string>
    <string name="type_of_subscription">Тип абонемента</string>
    <string name="quantity_of_month_or_trip">Кількість місяців/поїздок</string>
    <string name="validity">Термін дії</string>
    <string name="nominal">Іменний</string>
    <string name="type_of_blank">Тип бланку</string>
    <string name="number_of_paper_blank">Номер паперового бланку</string>
    <string name="select_article_of_administrative_fine">Виберіть статтю адміністративного штрафу</string>
    <string name="size_of_of_administrative_fine">Розмір адміністративного штрафу</string>
    <string name="enter_size_of_of_administrative_fine">Введіть розмір адміністративного штрафу</string>
    <string name="add">Додати</string>
    <string name="seat_not_selected">Місце не вибрано</string>
    <string name="no_free_seat">Вільні місця відсутні</string>
    <string name="prepare_card_for_recording">Підготуйте картку для запису</string>
    <string name="start_recording">Розпочати запис</string>
    <string name="wagon">Вагон</string>
    <string name="types_class">Клас місця</string>
    <string name="carrier">Перевізник</string>
    <string name="added">Додано</string>
    <string name="list_of_article_of_administrative_fine">Статті адміністративного штрафу</string>
    <string name="station_of_transfer">Станція пересадки</string>
</resources>