<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/_new"
                    android:text="@string/_new"
                    android:onClick="onClickNewTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/retry"
                    android:text="@string/retry"
                    android:onClick="onClickRetry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/redemption"
                    android:text="@string/redemption"
                    android:onClick="onClickRedemption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/repay"
                    android:text="@string/repay"
                    android:onClick="onClickRepay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/testTicket"
                    android:text="@string/test_ticket"
                    android:onClick="onClickTestTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/posadchykStatement"
                    android:text="@string/posadchyk_statement"
                    android:onClick="onClickPosadchykStatement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>