<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
            android:text="@string/menuOfficialIntroduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/tv_vertical_margin"
            android:paddingBottom="@dimen/tv_vertical_margin"/>

    <Button
            android:id="@+id/officialIntroduction"
            android:text="@string/official_introduction"
            android:onClick="onClickOfficialIntroduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/officialIntroductionSurplus"
            android:text="@string/introduction_surplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/officialIntroductionFromAnotherCashier"
            android:text="@string/introduction_from_another_cashier"
            android:onClick="onClickOfficialIntroductionFromAnotherCashier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
