<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
            android:id="@+id/scrollReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/cashier"
                    android:text="@string/cashier"
                    android:onClick="onClickCashier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/auditor"
                    android:text="@string/auditor"
                    android:onClick="onClickAuditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/posadchyk"
                    android:text="@string/posadchyk"
                    android:onClick="onClickPosadchyk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonOfficialIntroduction"
                    android:text="@string/official_introduction"
                    android:onClick="onClickButtonOfficialIntroduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/buttonOfficialWithdrawal"
                    android:text="@string/official_withdrawal"
                    android:onClick="onClickButtonOfficialWithdrawal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/reportsCash"
                    android:text="@string/report"
                    android:onClick="onClickReportsCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>