<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
            android:id="@+id/layoutListOfSeat"
            android:onClick="onClickSelectFromListOfSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/list_of_seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/tv_vertical_margin"
                android:paddingBottom="@dimen/tv_vertical_margin"/>

        <TextView
                android:id="@+id/selectFromListOfSeats"
                android:hint="@string/select_from_list_of_seats"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/tv_vertical_margin"
                android:paddingBottom="@dimen/tv_vertical_margin"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_of_line"
                android:maxHeight="1dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layoutEnterNumberSeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/number_seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/tv_vertical_margin"
                android:paddingBottom="@dimen/tv_vertical_margin"/>

        <EditText
                android:id="@+id/enterNumberSeat"
                android:hint="@string/enter_number_seat"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/tv_vertical_margin"
                android:paddingBottom="@dimen/tv_vertical_margin"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_of_line"
                android:maxHeight="1dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/addPosition"
                android:onClick="onClickAddPosition"
                android:text="@string/add"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
                android:id="@+id/next"
                android:onClick="onClickNext"
                android:text="@string/next"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
    </LinearLayout>


</LinearLayout>